Thu Jan 10 15:04:44 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/Component_Registry.cpp:
        
          Bug fix where the component registration was being deleted
          during the unregistration process.

Thu Jan 10 14:49:14 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/BDC/Testing_Service_exec_i.cpp:

          Re-enabled the unregistration of components.

        * cuts/Component_Registry.cpp:

          Unregistering a component does not delete its registration
          inforamation, it just updates its state. This allows use to
          re-register components when they come online.

Thu Jan 10 06:00:33 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/BDC/Testing_Service_exec_i.cpp:

          Temporarily disabled unregistering a component in the registry.

        * cuts/BDC/svcs/baseline/Baseline_Archiver_DB.h:
        * cuts/BDC/svcs/baseline/Baseline_Archiver_DB.cpp:
        * cuts/BDC/svcs/baseline/Baseline_Service.cpp:

          - Added error checks for NULL pointers.
          - Fixed bug where the system metrics were archived twice.

Wed Jan  9 16:08:30 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/BDC/svcs/baseline/Baseline_Archiver_DB.h:
        * cuts/BDC/svcs/baseline/Baseline_Archiver_DB.cpp:
        * cuts/BDC/svcs/baseline/Baseline_Service.cpp:

          Modified the interface of the database archiver so that there
          is only one point-of-entry, i.e., execute (...).

Wed Jan  9 02:12:27 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/BDC/svcs/baseline/Baseline_Archiver_DB.cpp:

          Implement separate logic for inserting default baseline
          metrics vs. host-specific baseline metrics.

        * etc/SQL/CUTS-baseline.sql:

          Bug fix where inserting a metrics that already appeared in
          baseline table, i.e., an update, would not be recognized
          for overall metrics.
